# system_prog

./: CMakeLists.txt  ClientNode.cpp  DigitalIONode.cpp  GyroSensorNode.cpp  README.md  ServerNode.cpp
inc/: DigSensorLib.h  GyroLib.h  KeypadLib.h  RelayLib.h  SocketConLib.h  i2c.h
src/: CMakeLists.txt  DigSensorLib.cpp  GyroLib.cpp  KeypadLib.cpp  RelayLib.cpp  SocketConLib.cpp  i2c.cpp
